# odin

./: .env.template  .envrc  .gitignore  .tool-versions  Dockerfile  README.md  config.toml.template  config_venv.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/actions/python_deps/: action.yaml
.github/actions/tools/: action.yaml
.github/workflows/: change_task_count.yaml  ci_python.yaml  deploy_base.yaml  deploy_prod.yaml  manual-deploy.yaml  manual_deploy.yaml
docs/adr/: 0001-migrations.md
docs/adr/migrations/: README.md
src/odin/: job.py  run.py
src/odin/generate/cubic/: delta_ods.py  ods_fact.py
src/odin/generate/data_dictionary/: cubic_reports_sql.py  dictionary.py  duck_db.py
src/odin/ingestion/afc/: afc_archive.py  (+3 more)
src/odin/migrate/: process.py
src/odin/spare/: spare_job.py
src/odin/utils/: delta.py  instance.py  locations.py  logger.py  parquet.py  run_log_to_file.py  runtime.py  status.py
tests/: job_test.py
tests/generate/: data_dictionary_test.py
tests/generate/cubic/: delta_ods_property_test.py  delta_ods_test.py  ods_fact_test.py
tests/ingestion/afc/: afc_archive_test.py
tests/ingestion/masabi/: masabi_archive_test.py
tests/ingestion/qlik/: cubic_import_test.py  delta_archive_test.py
tests/ingestion/spare/: s3_test.py  spare_job_test.py  spare_s3_test.py
tests/ingestion/tableau/: tableau_upload_test.py
tests/migrate/: migrations_test.py
tests/spare/: s3_test.py  spare_job_test.py
tests/utils/: logger_test.py  parquet_test.py  runtime_test.py
tests/utils/aws/: ecs_test.py
(+90 files in other folders)
